--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -67,6 +67,8 @@
   .footer {
     .container {
       background: linear-gradient(227.07deg, #4e0062 0.43%, #220076 99.56%);
+      max-width: 340px;
+      padding: 0px 15px;
       .row_footer {
         padding-top: 81px;
         margin-bottom: 60px;
