--- a/scss/blocks/_learn.scss
+++ b/scss/blocks/_learn.scss
@@ -69,8 +69,9 @@
   .main {
     .learn {
       .container {
-        padding: 0px 30px;
         text-align: center;
+        max-width: 340px;
+        padding: 0px 15px;
         h1 {
           font-family: "Poppins";
           font-style: normal;
