--- a/scss/blocks/_never.scss
+++ b/scss/blocks/_never.scss
@@ -62,6 +62,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        max-width: 340px;
+        padding: 0px 15px;
         .never_left_img {
           display: none;
         }
