--- a/scss/blocks/_platform.scss
+++ b/scss/blocks/_platform.scss
@@ -40,6 +40,8 @@
   .main {
     .platform {
       .container {
+        max-width: 340px;
+        padding: 0px 15px;
         h1 {
           margin-bottom: 30px;
           text-align: center;
