--- a/scss/blocks/_prices.scss
+++ b/scss/blocks/_prices.scss
@@ -53,6 +53,8 @@
         padding-bottom: 0px;
         .container {
           background-color: rgb(2, 2, 49);
+          max-width: 340px;
+          padding: 0px 15px;
           .asosiy_table {
             display: none;
           }
